--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -105,7 +105,7 @@
             <div class="queryemail">
                 <div>For any queries</div>
                 <div class="email">
-                    <a href="mailto:202101425@daiict.ac.in?cc=202101482@daiict.ac.in&bcc=202101419@daiict.ac.in
+                    <a href="mailto:medai.solutions.health@gmail.com?cc=202101425@daiict.ac.in&bcc=202101419@daiict.ac.in
                     &subject=Queries%20regarding%20MED%20AI
                     &body=Type%20your%20Query%20here:-%20">
                         <svg xmlns="http://www.w3.org/2000/svg" width="29" height="31" viewBox="0 0 29 31" fill="none">
@@ -119,7 +119,7 @@
                             <path d="M26.5833 15.4185V6.29016H14.5" stroke="white" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                        <div class="text">Med-Ai@gmail.com</div>
+                        <div class="text">Med-Ai Email Link</div>
                     </a>
                 </div>
             </div>
@@ -144,18 +144,19 @@
 
             <div class="imagecontainer">
                 <div class="col1">
-                    <a href="http://"><img src="../static/public/ayush.svg" alt="ayush"></a>
-                    <a href="http://"><img src="../static/public/aryan.svg" alt="aryan"></a>
-                    <a href="http://"><img src="../static/public/akshat.svg" alt="akshat"></a>
-                    <a href="http://"><img src="../static/public/anjali.svg" alt="anjali"></a>
-                    <a href="http://"><img src="../static/public/akshar.svg" alt="akshar"></a>
+                    <a href="https://www.linkedin.com/in/vansh-joshi21/" target="_blank" rel="noopener noreferrer"><img src="../static/public/vansh.svg" alt="vansh"></a>
+                    <a href="https://www.linkedin.com/in/akshat-prasad-3635ba221/" target="_blank" rel="noopener noreferrer"><img src="../static/public/akshat.svg" alt="akshat"></a>
+                    <a href="https://www.linkedin.com/in/yuvraj-chaudhari-8a23a8280/" target="_blank" rel="noopener noreferrer"><img src="../static/public/yuvraj.svg" alt="yuvraj"></a>
+                    <a href="https://www.linkedin.com/in/aryan-jivani-318892244/" target="_blank" rel="noopener noreferrer"><img src="../static/public/aryan.svg" alt="aryan"></a>
+              
+                    <a href="https://www.linkedin.com/in/akshar-panchani-2b9511236/" target="_blank" rel="noopener noreferrer"><img src="../static/public/akshar.svg" alt="akshar"></a>
+                    <a href="https://www.linkedin.com/in/parth-parmar-7a6843223/" target="_blank" rel="noopener noreferrer"><img src="../static/public/parth.svg" alt="parth"></a>
+                    <a href="https://www.linkedin.com/in/nikunj-variya-720736262/" target="_blank" rel="noopener noreferrer"><img src="../static/public/nikunj.svg" alt="nikunj"></a>
+                    <a href="https://www.linkedin.com/in/anjali-jilariya-8b119727a/" target="_blank" rel="noopener noreferrer"><img src="../static/public/anjali.svg" alt="anjali"></a>
 
-
-                    <a href="http://"><img src="../static/public/vansh.svg" alt="vansh"></a>
-                    <a href="http://"><img src="../static/public/nikunj.svg" alt="nikunj"></a>
-                    <a href="http://"><img src="../static/public/parth.svg" alt="parth"></a>
-                    <a href="http://"><img src="../static/public/yuvraj.svg" alt="yuvraj"></a>
-                    <a href="http://"><img src="../static/public/arjav.svg" alt="arjav"></a>
+                    <a href="https://www.linkedin.com/in/arjav-gandhi-a5740222a/" target="_blank" rel="noopener noreferrer"><img src="../static/public/arjav.svg" alt="arjav"></a>
+                    <a href="https://www.linkedin.com/in/sumukh-patel-325017224/" target="_blank" rel="noopener noreferrer"><img src="../static/public/sumukh.svg" alt="sumukh"></a>
+                    <a href="https://www.linkedin.com/in/sumukh-patel-325017224/" target="_blank" rel="noopener noreferrer"><img src="../static/public/ayush.svg" alt="ayush"></a>
 
 
 
