--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -13,8 +13,8 @@
 <body>
 <div class="homepage">
     <div class="rectangle-5">
-        <a href="./homepage" class="logoandname">
-            <div class="company-icon"><img class="image" alt="" src="../static/public/logo.svg"></div>
+        <a href="./homepage" class="company-icon">
+            <img class="image" alt="" src="../static/public/logo.svg">
             <div class="logoname">MED.AI</div>
         </a>
         <div class="nav">
