--- a/HMS/static/css/signup.css
+++ b/HMS/static/css/signup.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: volko;
-    src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
+    src: url(../../static/public/mudkty-wtvolkolakgrotesque-light.ttf);
 }
 * {
     font-family: 'Montserrat Alternates', sans-serif;
@@ -16,49 +16,44 @@ body {
     width: 100vw;
 }
 .rectangle-5 {
+    position: relative;
     display: flex;
-    gap: 34vw;
-    justify-content: flex-end;
-    padding: 7vh 5vw 1vh;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+    padding: 2% 15%;
     align-items: center;
-    margin-bottom: 50px;
 }
-
-.logoname {
-    font-family: 'MADEEvolveSansEVO', sans-serif;
-    font-size: 1.5rem;
+.logoname{
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
     font-weight: 600;
+    line-height: normal;
+    font-family: "MADEEvolveSansEVO";
 }
-
-.logoandname{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.rectangle-5 .company-icon{
     color: black;
     text-decoration: none;
+    margin-right: auto; 
 }
-
-.rectangle-5 .company-icon {
-    display: flex;
-    align-items: center;
-}
-
 .rectangle-5 .nav {
     display: flex;
-    gap: 10vw;
+    flex-wrap: wrap; 
+    gap: 20px; 
 }
-
 .nav a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 600;
     color: #170808;
-    padding: 10px 15px;
+    white-space: nowrap; 
+    padding: 10px 15px; 
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 .nav a:hover{
     color:#0067FF;
-    font-size: 1.08rem;
+    font-size: 18px;
   }
 .ellipse14 {
     display: flex;
